Pre-processing added to Methodology and part of AC

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -106,3 +106,9 @@
 \newacronym{acolite}{ACOLITE}{Atmospheric Correction for OLI lite}
 
 \newacronym{tsm}{TSM}{Total Suspended Matter}
+
+\newacronym{rho}{$\rho$}{apparent reflectance}
+
+\newacronym{rhot}{$\rho_t$}{sensor-reaching reflectance}
+
+\newacronym{rhow}{$\rho_w$}{water-leaving reflectance}
